# swagger/python-flask-server-swagger/swagger_server/swagger/swagger.yaml
@@ -6,14 +6,15 @@ info:
     or not
   version: 0.2.8
 servers:
-- url: /
+- url: http://localhost:5000/v1
+  description: Sandbox server (uses test data)
 paths:
-  /api/addresses:
+  /addresses:
     get:
       tags:
       - Address
       summary: Returns a list of addresses
-      operationId: api_addresses_get
+      operationId: addresses_get
       responses:
         "200":
           description: A JSON array of addresses information and coordinates
@@ -55,7 +56,7 @@ paths:
       tags:
       - Address
       summary: Register an address
-      operationId: api_addresses_post
+      operationId: addresses_post
       requestBody:
         content:
           application/json:
@@ -64,20 +65,30 @@ paths:
         required: true
       responses:
         "200":
-          description: A string informing about success
+          description: An id of the created document
           content:
             application/json:
               schema:
                 type: string
-                example: Registration created successfully
+                example: 6563ab4b514febb49306a795
                 x-content-type: application/json
       x-openapi-router-controller: swagger_server.controllers.address_controller
-  /api/address/<id>:
+  /address/{id}:
     get:
       tags:
       - Address
       summary: Return an object address
-      operationId: api_addressid_get
+      operationId: address_id_get
+      parameters:
+      - name: id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          maxItems: 1
+          type: string
+        example: 6563ab4b514febb49306a795
       responses:
         "200":
           description: An object informing the address and his coordinates
@@ -112,7 +123,17 @@ paths:
       tags:
       - Address
       summary: Update an address and return an object address with the new values
-      operationId: api_addressid_put
+      operationId: address_id_put
+      parameters:
+      - name: id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          maxItems: 1
+          type: string
+        example: 6563ab4b514febb49306a795
       requestBody:
         content:
           application/json:
@@ -154,7 +175,17 @@ paths:
       - Address
       summary: Delete an address and return a message informing whether the deletion
         process was successful
-      operationId: api_addressid_delete
+      operationId: address_id_delete
+      parameters:
+      - name: id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          maxItems: 1
+          type: string
+        example: 6563ab4b514febb49306a795
       responses:
         "200":
           description: Successful message
@@ -165,7 +196,7 @@ paths:
                 example: Registration deleted successfully
                 x-content-type: application/json
         "404":
-          description: Successful message
+          description: Error message
           content:
             application/json:
               schema:
@@ -173,6 +204,146 @@ paths:
                 example: "An error has occurred: Error deleting or non-existing record"
                 x-content-type: application/json
       x-openapi-router-controller: swagger_server.controllers.address_controller
+  /distance/closest:
+    get:
+      tags:
+      - Distance
+      summary: Return an object with the closest location to the given coordinates
+        and the distance in meters
+      operationId: distance_closest_get
+      parameters:
+      - name: lat
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          maxItems: 1
+          type: number
+        example: -22.910288105803257
+      - name: lng
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          maxItems: 1
+          type: number
+        example: -43.16440758828707
+      responses:
+        "200":
+          description: An object address with the distance that represent the closest
+            register to the given coordinates
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                - _id:
+                    $oid: 655de875051df4458d1d32be
+                  number: "520"
+                  street: AV. Pasteur
+                  district: Urca
+                  city: Rio de Janeiro
+                  state: RJ
+                  country: Brazil
+                  location:
+                    type: Point
+                    coordinates:
+                    - -22.9489641
+                    - -43.1546316
+                  distance: 26481.382810215204
+                x-content-type: application/json
+        "400":
+          description: Return an error message
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Invalid parameter value: Invalid latitude or longitude value"
+                x-content-type: application/json
+      x-openapi-router-controller: swagger_server.controllers.distance_controller
+  /distance/addresses:
+    get:
+      tags:
+      - Distance
+      summary: Return the distance between two given addresses
+      operationId: distance_addresses_get
+      parameters:
+      - name: start_address
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          $ref: '#/components/schemas/Address'
+      - name: end_address
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          $ref: '#/components/schemas/Address'
+      responses:
+        "200":
+          description: A number that represent the distance in meters
+          content:
+            application/json:
+              schema:
+                type: number
+                example: 5725.929424237887
+                x-content-type: application/json
+        "400":
+          description: Error mesage
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Error in geocoding request: Invalid Address, no coordinates\
+                  \ were found for the address provided"
+                x-content-type: application/json
+      x-openapi-router-controller: swagger_server.controllers.distance_controller
+  /distance/registers:
+    get:
+      tags:
+      - Distance
+      summary: Return the distance between two given registers
+      operationId: distance_registers_get
+      parameters:
+      - name: start_id_address
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+          example: 655de875051df4458d1d32be
+      - name: end_id_address
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+          example: 6563ab4b514febb49306a795
+      responses:
+        "200":
+          description: A number that represent the distance in meters
+          content:
+            application/json:
+              schema:
+                type: number
+                example: 5725.929424237887
+                x-content-type: application/json
+        "400":
+          description: Error message
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "An error has occurred: Address not found"
+                x-content-type: application/json
+      x-openapi-router-controller: swagger_server.controllers.distance_controller
 components:
   schemas:
     Address:
